[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/loot/blueprint.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/PublicPixel-z84yD.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/CriticalComponent.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "bounce"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, 0 ), Vector2( 0, -5 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "move_up"
tracks/0/type = "value"
tracks/0/path = NodePath("ObtainedLabel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -77, -24 ), Vector2( -77, -50 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 12.5 )

[sub_resource type="DynamicFont" id=5]
size = 8
font_data = ExtResource( 2 )

[node name="CriticalComponent" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -2.5 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -72.0
margin_top = -23.0
margin_right = 72.0
margin_bottom = -12.0
custom_fonts/font = SubResource( 1 )
text = "Critical Component"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/bounce = SubResource( 2 )
anims/move_up = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -0.5 )
shape = SubResource( 3 )

[node name="ObtainedLabel" type="Label" parent="."]
visible = false
margin_left = -77.0
margin_top = -24.0
margin_right = 75.0
margin_bottom = -10.0
custom_fonts/font = SubResource( 5 )
text = "Component Acquired!"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
